# tests/fastapi/openapi_cp_ga_snapshot.json
@@ -3,6 +3,7 @@
   "operationIds": [
     "cp_abort_input_resource",
     "cp_ack_schema_observation",
+    "cp_amend_schedule",
     "cp_approval_create",
     "cp_approval_decide",
     "cp_approval_get",
@@ -13,6 +14,7 @@
     "cp_audit_export",
     "cp_audit_list",
     "cp_cancel_run",
+    "cp_cancel_run_preparation",
     "cp_cleanup_input_resources",
     "cp_create_schedule",
     "cp_definition_context",
@@ -43,6 +45,7 @@
     "cp_get_run_actions",
     "cp_get_run_artifact_content",
     "cp_get_run_lineage",
+    "cp_get_run_preparation",
     "cp_get_run_report",
     "cp_get_schedule",
     "cp_health",
@@ -82,10 +85,12 @@
     "cp_registry_put_workspace",
     "cp_replay_run",
     "cp_rerun_run",
+    "cp_resume_run",
     "cp_resume_schedule",
     "cp_retry_run",
     "cp_scheduler_health",
     "cp_stage_input_resource",
+    "cp_start_run_preparation",
     "cp_stream_run_events",
     "cp_submit_connector_action",
     "cp_submit_run",
